# Abandon

./: .gitignore  readme.md
C/: bigNum_eat_smallNum.c  show_bytes.c
Cxx/rReadLine/: Makefile  main.cpp  rreadline.cpp  rreadline.h
Cxx/socket_project/: CMakeLists.txt  Makefile  README.md  aws.cc  aws.h  client.cc  global.h  monitor.cc  peer.cc  peer.h  serverA.cc  serverB.cc  serverC.cc  server_util.h
Docker/Docker Compose/: gitlab-docker-dompose.yml
Lua/: hello.lua
Python/: readme.md
Python/Celery/: tasks.py
Python/Mock/: mymodule.py  tests.py
Python/argparser/: turorial.py
Python/face_reco/: face_detection.py
Python/send_email/: email_with_attachment.py  letter.txt  readme.md  rfc822_header.py  send_enire_directory.py  send_html_mail.py  simple_text_msg.py
Rust/chap2_exercise/: Cargo.toml
Rust/guessing_game/: Cargo.toml
Rust/owner_ship/: Cargo.toml
Shell/: lisupy.zsh-theme  lisupy.zshrc  readme.md
Tensorflow/: readme.md  requirements.txt  simple_gradient.py
Tensorflow/eager_execution/: gradient_linear_regression.py  simple_gradient.py
Tensorflow/tensorlayer/: .gitignore  mnist_cnn.py  mnist_test.py  train.py
nodejs/: .gitignore  helloworld.js  package-lock.json  readquerystring.js  splitquerystring.js
nodejs/asynchronous_learning/: chrome_controler.js  learn_event.js  package-lock.json  package.json  read_passwd.js  timeout.js
nodejs/mymodule/: myfirstmodule.js  showdatetime.js
nodejs/screenshot/: .gitignore  hybrid_model_predict.py  (+9 more)
perl/: d2h.pl  h2d.pl
vim/: cpp.snippets  linux.ycm_extra_conf.py  my.vimrc  ycm_extra_conf.py
(+33 files in other folders)
